<resources>
    <string name="app_name">GithubUser</string>
    <string name="username">Username</string>

    <string name="this_activity">Menu Activity</string>
    <string name="searchbar_text">Search username</string>
    <string name="name">Name</string>
    <string name="follower">Followers</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="repository_total">Repository total</string>
    <string name="following_total">following total</string>
    <string name="follower_total">follower total</string>
    <string name="user_not_found">User Not Found!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_favorite">Tombol Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="setting">Setting</string>
    <string name="dark_mode">Dark Mode</string>
</resources>